# gmark

./: .env  .env.example  .gitignore  IMPLEMENTATION.md  QUICKSTART.md  README.md  README_COMPLETE.md  README_NEW.md  TESTING.md  Taskfile.yml  license  migrate_db.py  pyproject.toml  setup.sh
.github/workflows/: test.yml
assets/: data.sql
browser-extension/: PROMPT_API.md  README.md  background.js  content.js  eslint.config.js  generate_icons.py  generate_png_icons.py  manifest.json  options.html  options.js  package.json  popup.html  popup.js
browser-extension-local/: CHROME_SETUP.md  PROMPT_API_TYPES.md  README.md  TEST.md  manifest.json  package-lock.json  package.json  test-ai.js  tsconfig.json
browser-extension-local/docs/: BOOTSTRAP.md
browser-extension-local/src/: background.js  content.js
browser-extension-local/src/config/: README.md  categories.yml
browser-extension-local/src/services/: ai-provider.js  bootstrap.js  classification.js  duplicates.js
browser-extension-local/src/types/: ai.d.ts  ai.js
browser-extension-local/src/ui/: dashboard.css  dashboard.html  dashboard.js  options.html  options.js  popup.css  popup.html  popup.js
browser-extension-local/src/utils/: ai-proxy-old.js  ai-proxy.js  ai-worker-old.html  ai-worker.html  logger.js  simple-charts.js  storage-optimizer.js  storage.js  usage.js  yaml-parser.js
browser-extension/__tests__/: popup.test.js
deno/: .env  README.md  deno.json
deno/prisma/: schema.prisma
deno/src/: main.ts
deno/src/controllers/: bookmark.ts  folder.ts  user.ts
deno/src/services/: ai.test.ts  ai.ts  bookmark.ts  html.test.ts  html.ts  user.test.ts  user.ts
deno/src/utils/: db.ts  jwt.ts  password.ts  schemas.ts
docs/: EXTENSION_SUMMARY.md  EXTENTION_INSTALL.md  GMARK_LOCAL.md  INDEX.md  LOAD_EXTENSION.md  PROMPT_API.md  README_DENO.md  TASKFILE.md
examples/: demo.py
gmark/: app.py  bookmark.py  gmark.py  server.py
gmark/DTOs/: ActiveSession.py  Bookmark.py  BookmarkFolder.py  CustomResponseMessage.py  Teams.py  User.py  __init__.py
gmark/controllers/: BookmarkController.py  UserController.py
gmark/entity_manager/: entity_manager.py  gmark.py
gmark/repositories/: BookmarkRepository.py  IBookmarkRepository.py  IUserRepository.py  UserRepository.py
gmark/services/: BookmarkService.py  UserService.py
gmark/util/: html.py
static/: chrome-ai-demo.html
