[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gmark"
version = "0.2.0"
description = "AI-powered bookmark manager with filesystem-like organization and multi-AI support (Chrome AI, AnythingLLM, OpenAI)"
authors = [{name = "afeldman", email = "anton.feldmann@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mypy>=1.13.0",
    "openai>=1.54.4",
    "pydantic>=2.9.2",
    "beautifulsoup4>=4.12.3",
    "requests>=2.32.3",
    "fastapi>=0.115.5",
    "fastapi-utils>=0.7.0",
    "passlib[bcrypt]>=1.7.4",
    "pyjwt>=2.8.0",
    "uvicorn>=0.32.0",
    "loguru>=0.7.2",
    "peewee>=3.17.8",
    "fire>=0.7.0",
    "tqdm>=4.48.0",
    "httpx>=0.27.0",
    "python-decouple>=3.8",
    "typing-inspect>=0.9.0",
    "python-multipart>=0.0.21",
    "unparallel>=0.5.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "flake8>=5.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["gmark"]
